Complete the generation demo